test/error/PreExprInvalid.ci
public static class Test
{
	public static bool Run()
	{
#if 1 + 2 //ERROR: Invalid preprocessor expression //ERROR: Expected EndOfLine, got LiteralLong
#endif
		return true;
	}
}
